Fixed overflow bug

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -10,6 +10,8 @@
 body {
     background-color: #CCC;
     font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    overflow: hidden;
 }
 
 button {
